--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,user-scalable=no"><link rel="manifest" href="/calculator/manifest.json"><link rel="shortcut icon" href="/calculator/favicon.ico"><title>React Calculator</title><link href="/calculator/static/css/main.b51b4a8b.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><a class="github-fork-ribbon left-top" href="https://github.com/ahfarmer/calculator" title="Fork me on GitHub">Fork me on GitHub</a><script type="text/javascript" src="/calculator/static/js/main.b319222a.js"></script></body></html>
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>React Webpack Template</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+</head>
+<body>
+  <div id="app"></div>
+  <script>__REACT_DEVTOOLS_GLOBAL_HOOK__ = parent.__REACT_DEVTOOLS_GLOBAL_HOOK__</script>
+<script type="text/javascript" src="vendors~main.js"></script><script type="text/javascript" src="main.js"></script></body>
+</html>
